Publish ports as host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
 
-    ports:
-      - 9000:9000
+    ports:    
+      - target: 9000
+        published: 9000
+        protocol: tcp
+        mode: host
 
     deploy:
       placement:
