--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,47 @@
-version: "3.3"
+version: '3.2'
 
 
 networks:
   traefik-public:
     external: true
+    
+  agent_network:
+    driver: overlay
+    attachable: true
 
 volumes:
   portainer_data:
 
 services:
-  portainer:
-    image: portainer/portainer-ce:2.14.2
-    command: -H unix:///var/run/docker.sock
+  agent:
+    image: portainer/agent:2.14.2
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
-
-    ports:    
-      - target: 9000
-        published: 9000
-        protocol: tcp
-        mode: host
+      - /var/lib/docker/volumes:/var/lib/docker/volumes
+    networks:
+      - agent_network
 
     deploy:
+      mode: global
+      placement:
+        constraints:
+          - node.platform.os == linux
+
+  portainer:
+    image: portainer/portainer-ce:2.14.2
+    command: -H tcp://tasks.agent:9001 --tlsskipverify
+    ports:
+      - "8000:8000"
+    volumes:
+      - portainer_data:/data
+    
+    networks:
+      - agent_network
+      - traefik-public
+    
+    deploy:
+      mode: replicated
+      replicas: 1
       placement:
         constraints:
           - node.labels.portainer-data == true
@@ -35,6 +54,3 @@ services:
         - traefik.http.routers.portainer.entrypoints=websecure
         - traefik.http.routers.portainer.tls.certresolver=le
         - traefik.http.services.portainer.loadbalancer.server.port=9000
-
-    networks:
-      - traefik-public
